<resources>
    <string name="app_name">Book</string>
    <string name="tab_bookcase">我的书柜</string>
    <string name="add_my_book">添加图书</string>
    <string name="tab_bookmarket">书香集市</string>
    <string name="bookname">图书名称</string>
    <string name="bookauthor">图书作者</string>
    <string name="bookpublisher">出版社</string>
    <string name="bookstatus">图书状态</string>
    <string name="booksummary">图书简介</string>
    <string name="status_rent_text">已借出</string>

    <string name="tab_login">登录</string>
    <string name="login_label_username">用户名</string>
    <string name="login_label_password">密码</string>
    <string name="login_username_hint">请输入帐号</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_up">注册</string>
    <string name="mine_current_accout">当前用户</string>

    <string name="logout_title">真的要走吗？</string>
    <string name="logout_comfirm">确定</string>
    <string name="logout_cancel">取消</string>
    <string name="tab_signup">注册</string>
    <string name="login_password_hint_again">请再次确认密码</string>
    <string name="action_signup">提交注册</string>
    <string name="phone_hint">请输入手机号码</string>

    <string name="book_detail_title">书籍详情</string>
    <string name="bookowner">联系电话</string>
</resources>
