<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:layout_height="@dimen/height_topmenu"
        android:background="@color/appgreen"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/book_detail_title"
            android:textColor="@color/text_topmenu"
            android:background="@null"
            android:textSize="@dimen/big_fontsize">
        </TextView>

        <ImageView
            android:id="@+id/back_img"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:src="@drawable/tb_icon_actionbar_back" />
    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="8dp">
    </LinearLayout>

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:background="@color/white">-->

        <!--<ImageView-->
            <!--android:layout_width="100dp"-->
            <!--android:layout_height="100dp"-->
            <!--&gt;</ImageView>-->
    <!--</LinearLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white">
        <TextView
            style="@style/BookcaseItemAdd1"
            android:text="@string/bookname"
            android:layout_width="wrap_content" />
        <EditText
            android:id="@+id/detail_bookname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="5dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white">
        <TextView
            style="@style/BookcaseItemAdd1"
            android:text="@string/bookauthor" />
        <EditText
            android:id="@+id/detail_bookauthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp">
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white">
        <TextView
            style="@style/BookcaseItemAdd1"
            android:text="@string/bookpublisher" />
        <EditText
            android:id="@+id/detail_bookpublisher"
            android:layout_width="257dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp">
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white">
        <TextView
            style="@style/BookcaseItemAdd1"
            android:text="@string/bookstatus"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/status_rent_text"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/detail_bookstatuscheckbox"
            android:checked="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white">
        <TextView
            style="@style/BookcaseItemAdd1"
            android:text="@string/bookowner" />
        <TextView
            android:id="@+id/detail_owner_phone"
            android:layout_width="257dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white">
        <TextView
            style="@style/BookcaseItemAdd1"
            android:text="@string/booksummary"/>
        <EditText
            android:id="@+id/detail_booksummary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp">
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/detail_save_btn"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textColor="@color/white"
        android:background="@color/appgreen"
        android:text="保存"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/detail_del_btn"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textColor="@color/white"
        android:background="@color/appgreen"
        android:text="删除"/>

</LinearLayout>