<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/appgreen">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/logout_title"
                android:textColor="@color/white"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:gravity="center"
                android:textSize="22dp"
                android:minHeight="120.0dip"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="15dp"
                android:paddingBottom="10dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_logout_comfirm"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/logout_comfirm"/>
            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                >
            </LinearLayout>
            <Button
                android:id="@+id/btn_logout_cancel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/logout_cancel"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>